--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,17 @@
-node_modules/**/*
-.expo/*
-npm-debug.*
-*.jks
-*.p8
-*.p12
-*.key
-*.mobileprovision
-*.orig.*
-web-build/
+build/
 
-# macOS
-.DS_Store
+# dependencies
+/node_modules
+
+# expo
+.expo/
+
+# misc
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log
