--- a/app.json
+++ b/app.json
@@ -1,30 +1,33 @@
 {
-    "expo": {
-        "name": "beelligentApp",
-        "slug": "beelligentApp",
-        "version": "1.0.0",
-        "orientation": "portrait",
-        "icon": "src/assets/images/icon.png",
-        "splash": {
-            "image": "src/assets/images/splash.png",
-            "resizeMode": "contain",
-            "backgroundColor": "#ffffff"
-        },
-        "updates": {
-            "fallbackToCacheTimeout": 0
-        },
-        "assetBundlePatterns": ["**/*"],
-        "ios": {
-            "supportsTablet": true
-        },
-        "android": {
-            "adaptiveIcon": {
-                "foregroundImage": "src/assets/images/adaptive-icon.png",
-                "backgroundColor": "#FFFFFF"
-            }
-        },
-        "web": {
-            "favicon": "./assets/favicon.png"
-        }
+  "expo": {
+    "name": "beelligentApp",
+    "slug": "beelligentApp",
+    "version": "1.0.0",
+    "orientation": "portrait",
+    "icon": "src/assets/images/bee.png",
+    "splash": {
+      "image": "src/assets/images/splash.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#ffffff"
+    },
+    "updates": {
+      "fallbackToCacheTimeout": 0
+    },
+    "assetBundlePatterns": [
+      "**/*"
+    ],
+    "ios": {
+      "supportsTablet": true
+    },
+    "android": {
+      "adaptiveIcon": {
+        "foregroundImage": "src/assets/images/adaptive-icon.png",
+        "backgroundColor": "#FFFFFF"
+      },
+      "package": "com.emmanouil.beelligentApp"
+    },
+    "web": {
+      "favicon": "./assets/favicon.png"
     }
+  }
 }
